branches/wip/Archive/22b3b44d66ff9a1235b147f3438f815c-7063104e283ed82d51a6fde7370c6e59/output
+ g++-4.8 -std=c++11 -O2 -Wall -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:4:12: error: expected ‘]’ before numeric constant
     delete[100] arr;
            ^
main.cpp:4:12: error: type ‘int’ argument given to ‘delete’, expected pointer
main.cpp:4:15: error: expected ‘;’ before ‘]’ token
     delete[100] arr;
               ^
main.cpp:3:10: warning: unused variable ‘arr’ [-Wunused-variable]
     int* arr = new int[100];
          ^
